--- a/index.html
+++ b/index.html
@@ -16,12 +16,32 @@ scale=1.0”>
 <body>
     <section class=”conteudo-principal”></section>
     <h2 class=”titulo-principal”>Meus Objetivos do ano_</h2>
+    <div class="»conteudo»"
     <div class=”botoes”>
         <button class=”botao”>Cursos na Alura</button>
         <button class=”botao”>Criar projetos em JavaScript<button>
         <button class=”botao”>Criar um portfólio</button>
         <button class=”botao”>Atualizar meu currículo</button>
-    </div>
+        <div>
+        </div class="abas texto»">
+        </div class="aba-conteudo ativo">
+        <div class=»botoes»>
+            <button class=»botao ativo»>Cursos na Alura</button>
+            <button class=»botao»>Criar projetos em JavaScript<
+            button>
+            <button class=»botao»>Criar um portfólio</button>
+            <button class=»botao»>Atualizar meu currículo<
+            button>
+            </div>
+            <body>
+                <section class=»conteudo-principal»></section>
+                <h2 class=»titulo-principal»>Meus Objetivos do
+                ano<span>_<span></h2>
+                <div class=»botoes»> ...
+                </div>
+                <script src=»main.js»></script>
+                </body>
+        </div>
     <h2 class=”titulo-principal”>Meus Objetivos do ano<span>_<span></h2>
 </body>
 </html>
